--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<h2>Contact Information</h2>
+						<address>Kevin Blaskowski<br>469-536-9800<br>Frisco, TX</address>
 					</header>
 					<div class="row">
 						<div class="col-12">
-							<form method="post" action="#">
+							<!--<form method="post" action="#">
 								<div class="row">
 									<div class="col-6 col-12-small">
 										<input type="text" name="name" id="name" placeholder="Name" />
@@ -166,7 +166,7 @@
 										</ul>
 									</div>
 								</div>
-							</form>
+							</form>-->
 						</div>
 						<div class="col-12">
 							<hr />
